--- a/my-react-app/src/components/book-card/BookCard.module.scss
+++ b/my-react-app/src/components/book-card/BookCard.module.scss
@@ -4,13 +4,14 @@
   background: rgba(0, 0, 0, 0.03);
   display: grid;
   justify-content: center;
-  border-radius: 10px;
+  border-radius: 6px;
+  border: 1px solid rgba(0, 0, 0, 0.05);
   cursor: pointer;
 
   .content{
     text-align: start;
     font-size: 16px;
-    width: 180px;
+    width: 200px;
 
     .bookImg{
       max-width: 200px;
