--- a/my-react-app/src/components/book-list/BookList.module.scss
+++ b/my-react-app/src/components/book-list/BookList.module.scss
@@ -10,3 +10,12 @@
 .title{
   font-size: 20px;
 }
+
+.titleUnsuccessful{
+  display: grid;
+  justify-content: center;
+  font-size: 40px;
+  font-weight: 600;
+  position: relative;
+  top: -100px;
+}
