--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Manrope:wght@200;300;500;700;800&display=swap');
 body{
     margin: 0;
     font-family: "Lato";
