--- a/my-react-app/src/pages/details-book/DetailsBook.module.scss
+++ b/my-react-app/src/pages/details-book/DetailsBook.module.scss
@@ -1,51 +1,54 @@
 .wrapper{
+  font-family: 'Manrope', sans-serif;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 0.5fr) repeat(2, 1fr);
+  grid-template-columns: 0.5fr 1fr;
+  grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 
   .imgBook{
-    grid-area: 1 / 1 / 6 / 2;
     width: 300px;
     height: 460px;
-    margin: 50px 50px 50px 200px;
+    border: solid black 2px;
+    margin: 50px 50px 50px 125px;
   }
 
-  .category{
-    display: grid;
-    justify-items: start;
-    align-content: end;
+  .blockInfo{
+    text-align: start;
+    margin-top: 50px;
 
-    font-size: 20px;
-    color: rgba(0, 0, 0, 0.75);
-    grid-area: 1 / 2 / 2 / 3;
-    text-decoration-line: underline;
-  }
+    .category{
+      font-size: 20px;
+      color: rgba(0, 0, 0, 0.75);
+      text-decoration-line: underline;
+    }
 
-  .title{
-    display: grid;
-    justify-items: start;
-    grid-area: 2 / 2 / 3 / 3;
+    .title{
+      font-size: 40px;
+      font-weight: 600;
+      color: rgba(0, 0, 0, 1);
+    }
 
-    font-size: 40px;
-    font-weight: 600;
-    color: rgba(0, 0, 0, 1);
-  }
+    .author{
+      font-size: 22px;
+      color: rgba(0, 0, 0, 1);
+      margin-top: 20px;
+    }
 
-  .author{
-    display: grid;
-    justify-items: start;
-    grid-area: 3 / 2 / 4 / 3;
+    .publishedDate{
+      font-size: 22px;
+      color: rgba(0, 0, 0, 1);
+      margin-top: 10px;
+    }
 
-    font-size: 20px;
-    color: rgba(0, 0, 0, 1);
-  }
+    .description {
+      max-width: 800px;
+      font-size: 20px;
+      margin-top: 50px;
+      text-align: justify;
+      line-height: 28px;
+    }
 
-  .description {
-    display: grid;
-    justify-items: start;
-    grid-area: 4 / 2 / 5 / 3;
   }
 }
 
@@ -59,6 +62,7 @@
   outline: none;
   border: none;
   margin-bottom: 25px;
+  margin-top: 40px;
 
   &:hover {
     background: rgba(136, 138, 235, 1);
@@ -69,9 +73,8 @@
   }
 }
 
-//.div1 { grid-area: 1 / 2 / 2 / 3; }
-//.div2 { grid-area: 2 / 2 / 3 / 3; }
-//.div3 { grid-area: 3 / 2 / 4 / 3; }
-//.div4 { grid-area: 4 / 2 / 5 / 3; }
-//.div5 { grid-area: 5 / 2 / 6 / 3; }
-//.div6 { grid-area: 1 / 1 / 6 / 2; }
+.titleHeader{
+  font-size: 50px;
+  margin-top: 20px;
+
+}
