Добавлен адаптив, обновлена пагинация

--- a/my-react-app/src/components/book-list/BookList.module.scss
+++ b/my-react-app/src/components/book-list/BookList.module.scss
@@ -6,6 +6,19 @@
   grid-column-gap: 0px;
   grid-row-gap: 40px;
   margin-bottom: 50px;
+  
+  
+  @media (max-width: 1200px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (max-width: 1024px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: 767px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .title{
@@ -39,5 +52,10 @@
   &:active{
    background: rgba(136, 138, 235, 1);
   }
+}
+
+.linkBookCard{
+  color: rgba(0, 0, 0, 1);
+  text-decoration: none;
 }
 
