--- a/my-react-app/src/components/header/Header.module.scss
+++ b/my-react-app/src/components/header/Header.module.scss
@@ -35,6 +35,11 @@
     border-radius: 5px;
     border: 2px solid rgba(0, 0, 0, 0.5);
     margin-right: -20px;
+
+    @media (max-width: 524px) {
+      width: 200px;
+
+    }
   }
 
   .sortingBlock{
@@ -42,6 +47,11 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 300px;
+
+    @media (max-width: 767px) {
+      grid-template-columns: repeat(1, 1fr);
+      justify-items: center;
+    }
 
     .categories{
       display: grid;
